--- a/Restify.Server/Content/index.htm
+++ b/Restify.Server/Content/index.htm
@@ -38,7 +38,7 @@
             this.user = ko.observable("");
             this.pass = ko.observable("");
             this.submit = function () {
-                $.postJSON("/restify/login/", {
+                $.postJSON("/restify/auth/login", {
                     UserName: this.user(),
                     Password: this.pass() 
                 });
@@ -49,9 +49,11 @@
             this.isLoggedIn = ko.observable(true);
 
             this.loginInfo = new restifyLoginViewModel();
-            
+
             var self = this;
-            $.get("/restify/session/status", function (data) {
+            $.postJSON("/restify/auth/status", {
+                UserName: self.loginInfo.user(),
+            }, function (data) {
                 self.isLoggedIn(data.IsLoggedIn);
             });
         }
