So, the prototyping is kinda done, it works and all the troubles have been sort of worked out. Now, I'm making a lot of changes, refactoring and rewriting code to better suite the type of API. I wanna end up using, the idea is to push more of the thread synchronization stuff into the managed library and do as little as possible with the C++/CLI libspotify wrapper code

--- a/Restify.Server/Content/index.htm
+++ b/Restify.Server/Content/index.htm
@@ -91,6 +91,7 @@
                 }, function (data) {
                     self.isLoggedIn(data.IsLoggedIn);
                     if (data.IsLoggedIn) {
+                        $.ajaxSetup({ headers: { "X-RESTify-Instance": data.InstanceName } });
                         window.viewModel.instanceName = data.InstanceName;
                         parentViewModel.init();
                     }
@@ -106,14 +107,12 @@
             this.title = item.Title;
             this.length = item.Length;
             this.play = function () {
-                $.postJSON("/restify/user/" + window.viewModel.instanceName + "/play", {
+                $.postJSON("/restify/gateway/play", {
                     Id: this.id
                 });
             }
             this.enqueue = function () {
-                $.postJSON("/restify/user/" + window.viewModel.instanceName + "/enqueue", {
-                    Id: this.id
-                });
+                $.JSON("PUT", "/restify/gateway/queue/" + encodeURIComponent(this.id));
             }
         }
 
