Further refactroing (a lot more work to be done)
 - The message queue doesn't appear to be used anymore, it still a service that runs within the app though, maybe that's unecessary
 - I've added a IServiceContext which is composed as part of the request in a container which scope is tied to the operation context (1 container per request) [as it should be]
 - Contextual parameters such as HTTP headers and session data can be get/set through the IServiceContext
 - Added a Ping method to login for diagnostic purposes

--- a/Restify.Server/Content/index.htm
+++ b/Restify.Server/Content/index.htm
@@ -34,7 +34,7 @@
     
         <form action="#search" data-bind="submit: search">
             
-            <input id="search-textbox" type="text" data-bind="value: searchText, valueUpdate: 'afterkeydown'" />
+            <input id="search-textbox" type="text" data-bind="value: searchText, valueUpdate: 'afterkeydown'" /> <input type="image" src="spotify-search-button-32x32.png" />
 
         </form>
 
@@ -164,7 +164,7 @@
             this.search = function () {
                 var m = searchTrackId.exec(this.searchText())
                 if (m) {
-                    $.JSON("PUT", "/restify/gateway/queue/" + encodeURIComponent("spotify:track:" + m[1]));
+                    $.JSON("PUT", "/restify/master/queue/" + encodeURIComponent("spotify:track:" + m[1]));
                     this.searchText(null);
                 } else {
                     $.postJSON("/restify/user/" + this.instanceName + "/search?q=" + encodeURIComponent(this.searchText()), undefined, function (data) {
@@ -179,11 +179,11 @@
             }
 
             this.playPause = function () {
-                $.postJSON("/restify/gateway/playback/playPause");
+                $.postJSON("/restify/master/playback/playPause");
             }
 
             this.next = function () {
-                $.postJSON("/restify/gateway/playback/next");
+                $.postJSON("/restify/master/playback/next");
             }
 
 //            var self = this;
